--- a/css/custom.css
+++ b/css/custom.css
@@ -2,3 +2,22 @@
   box-sizing: border-box; }
 
 /*insert custom css below*/
+
+
+
+div {
+  width: 100px;
+  padding: 15px;
+  margin: 5px;
+  border: 10px;
+  font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 16px;
+  line-height: 1.5;
+  color: #000000;
+  text-align: center;
+}
+
+h1 {
+  color: #000000;
+  font-size: 1.7em;
+}
