--- a/css/custom.css
+++ b/css/custom.css
@@ -7,9 +7,9 @@
 
 div {
   width: 1000px;
-  padding: 15px;
-  margin: 5px solid black;
-  border: 10px;
+  padding: 30px;
+  margin: 5px;
+  border: 10px solid black;
 }
 
 h1 {
