--- a/css/custom.css
+++ b/css/custom.css
@@ -3,8 +3,6 @@
 
 /*insert custom css below*/
 
-
-
 div {
   width: 500px;
   padding: 30px;
@@ -12,7 +10,6 @@ div {
   border: 1px solid black;
 }
 
-h1 {
-  color: #000000;
-  font-size: 1.7em;
+.container {
+  background-color: #cccccc;
 }
