--- a/css/custom.css
+++ b/css/custom.css
@@ -15,7 +15,7 @@ body {
 }
 
 /* unvisited link */
-a:link {
+h1 {
     color: black;
     text-decoration: none;
 }
@@ -29,4 +29,3 @@ a:visited {
 a:hover {
     color: white;
 }
-
