--- a/css/custom.css
+++ b/css/custom.css
@@ -15,7 +15,7 @@ body {
 }
 
 /* unvisited link */
-h1 {
+a:link {
     color: black;
     text-decoration: none;
 }
@@ -29,3 +29,9 @@ a:visited {
 a:hover {
     color: white;
 }
+
+readmore:hover {
+  text-decoration: underline;
+}
+
+
