--- a/css/custom.css
+++ b/css/custom.css
@@ -15,18 +15,18 @@ body {
 }
 
 /* unvisited link */
-a:link {
+h1:link {
     color: black;
     text-decoration: none;
 }
 
 /* visited link */
-a:visited {
+h1:visited {
     color: black;
 }
 
 /* mouse over link */
-a:hover {
+h1:hover {
     color: white;
 }
 
