--- a/css/custom.css
+++ b/css/custom.css
@@ -6,7 +6,7 @@
 div {
   width: 500px;
   padding: 30px;
-  margin: 10px;
+  margin: 20px;
   border: 1px solid black;
 }
 
@@ -15,7 +15,7 @@ body {
 }
 
 h1 {
-  padding: 0px 0px 0px 15px;
+  padding-left: 30px;
 }
 
 small {
